archive/old_evaluations/run_4hour_20251029_070553/run_20251029_070553/task_cache_decorator/validation_output.txt
=== Command 1 ===
Command: python -c from cache import cache; @cache
def fib(n): return n if n<2 else fib(n-1)+fib(n-2)
assert fib(10)==55
Exit code: 1
Stdout:

Stderr:
  File "<string>", line 1
    from cache import cache; @cache
                             ^
SyntaxError: invalid syntax


